--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,7 +30,10 @@ jobs:
           ./run.sh bootstrap
 
       - name: Dependencies
-        run: ./run.sh install_all
+        run: |
+          git clone https://github.com/apache/spark
+          sh spark/R/install-dev.sh
+          ./run.sh install_all
 
       - name: Test
         run: ./run.sh run_tests
